fix: use deprecated
--HG--
branch : dev